--- a/pricing.html
+++ b/pricing.html
@@ -15,6 +15,12 @@
         .cta-button:hover { transform: translateY(-2px); box-shadow: 0 4px 20px rgba(52, 211, 153, 0.4); }
         .secondary-button { background-color: transparent; border: 1px solid #34D399; color: #34D399; transition: all 0.3s ease; }
         .secondary-button:hover { background-color: #34D399; color: #111827; }
+        .feature-list li { display: flex; align-items: start; }
+        .feature-list svg { flex-shrink: 0; margin-top: 5px; margin-right: 8px; }
+        /* Toggle Switch Styles */
+        .toggle-bg:after { content: ''; position: absolute; top: 2px; left: 2px; background: white; border-radius: 9999px; height: 1.5rem; width: 1.5rem; transition: transform 0.2s ease-in-out; }
+        input:checked + .toggle-bg:after { transform: translateX(100%); }
+        input:checked + .toggle-bg { background-color: #34D399; }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-200">
@@ -38,49 +44,81 @@
         <section class="py-20 bg-gray-900">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
-                    <h3 class="text-3xl md:text-4xl font-bold text-white">Simple, Transparent Pricing</h3>
-                    <p class="text-gray-400 mt-2">Choose the plan that's right for your business. Each company requires its own plan.</p>
+                    <h3 class="text-3xl md:text-4xl font-bold text-white">Find the plan that's right for you</h3>
+                    <p class="text-gray-400 mt-2">Start for free, then scale as you grow. No hidden fees.</p>
+                    <div class="mt-8 flex justify-center items-center space-x-4">
+                        <span id="monthly-label" class="font-semibold text-white">Monthly</span>
+                        <label for="billing-toggle" class="relative inline-flex items-center cursor-pointer">
+                            <input type="checkbox" id="billing-toggle" class="sr-only peer">
+                            <div class="w-12 h-7 bg-gray-600 rounded-full peer toggle-bg"></div>
+                        </label>
+                        <span id="annual-label" class="font-semibold text-gray-500">Annually</span>
+                        <span class="bg-emerald-100 text-emerald-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Save 15%</span>
+                    </div>
                 </div>
-                <div class="flex flex-col lg:flex-row justify-center items-center lg:items-stretch gap-8">
-                    <div class="card p-8 rounded-xl w-full lg:w-1/3 text-center flex flex-col justify-between">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
+                    <!-- Free Plan -->
+                    <div class="card p-8 rounded-xl w-full text-center flex flex-col justify-between">
+                        <div>
+                            <h4 class="text-xl font-semibold text-white">Free</h4>
+                            <p class="mt-4 text-4xl font-bold text-white">$0</p>
+                            <p class="text-gray-500 h-12">For individuals and small teams just getting started.</p>
+                            <ul class="mt-6 space-y-3 text-gray-400 text-left feature-list">
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Up to 5 users</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>1 Company</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Core Time Tracking</li>
+                            </ul>
+                        </div>
+                        <a href="app.html#signup" class="mt-8 w-full secondary-button px-6 py-3 rounded-lg font-semibold inline-block">Get Started</a>
+                    </div>
+                    <!-- Starter Plan -->
+                    <div class="card p-8 rounded-xl w-full text-center flex flex-col justify-between">
                         <div>
                             <h4 class="text-xl font-semibold text-white">Starter</h4>
-                            <p class="mt-4 text-4xl font-bold text-white">$10</p>
-                            <p class="text-gray-500">per company / month</p>
-                            <ul class="mt-6 space-y-2 text-gray-400">
-                                <li>Up to 10 users</li>
-                                <li>Core Time Tracking</li>
-                                <li>Basic Reporting</li>
-                                <li>Email Support</li>
+                            <div class="mt-4">
+                                <span class="text-4xl font-bold text-white" data-price-monthly="4" data-price-annual="3.40">$4</span>
+                                <span class="text-gray-400">/ user / month</span>
+                            </div>
+                            <p class="text-gray-500 h-12">For growing teams that need more power and support.</p>
+                            <ul class="mt-6 space-y-3 text-gray-400 text-left feature-list">
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Up to 15 users</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Everything in Free, plus:</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Advanced Reporting</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Email & Chat Support</li>
                             </ul>
                         </div>
                         <a href="app.html#signup" class="mt-8 w-full secondary-button px-6 py-3 rounded-lg font-semibold inline-block">Choose Plan</a>
                     </div>
-                    <div class="card p-8 rounded-xl w-full lg:w-1/3 text-center flex flex-col justify-between border-2 border-emerald-400 relative shadow-2xl shadow-emerald-500/20">
+                    <!-- Pro Plan -->
+                    <div class="card p-8 rounded-xl w-full text-center flex flex-col justify-between border-2 border-emerald-400 relative shadow-2xl shadow-emerald-500/20">
                          <span class="bg-emerald-400 text-gray-900 text-xs font-bold uppercase px-3 py-1 rounded-full absolute top-0 -mt-4 left-1/2 -translate-x-1/2">Most Popular</span>
                         <div>
-                            <h4 class="text-xl font-semibold text-white">Business</h4>
-                            <p class="mt-4 text-4xl font-bold text-white">$25</p>
-                            <p class="text-gray-400">per company / month</p>
-                            <ul class="mt-6 space-y-2 text-gray-300">
-                                <li>Unlimited Users</li>
-                                <li>Advanced Time Tracking</li>
-                                <li>Project Management</li>
-                                <li>Priority Support</li>
+                            <h4 class="text-xl font-semibold text-white">Pro</h4>
+                            <div class="mt-4">
+                                <span class="text-4xl font-bold text-white" data-price-monthly="8" data-price-annual="6.80">$8</span>
+                                <span class="text-gray-400">/ user / month</span>
+                            </div>
+                            <p class="text-gray-400 h-12">For businesses that need to manage multiple projects and companies.</p>
+                            <ul class="mt-6 space-y-3 text-gray-300 text-left feature-list">
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Unlimited Users</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Manage Multiple Companies</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Project Budgeting</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Priority Support</li>
                             </ul>
                         </div>
                         <a href="app.html#signup" class="mt-8 w-full cta-button px-6 py-3 rounded-lg font-semibold inline-block">Choose Plan</a>
                     </div>
-                    <div class="card p-8 rounded-xl w-full lg:w-1/3 text-center flex flex-col justify-between">
+                    <!-- Enterprise Plan -->
+                    <div class="card p-8 rounded-xl w-full text-center flex flex-col justify-between">
                         <div>
                             <h4 class="text-xl font-semibold text-white">Enterprise</h4>
                             <p class="mt-4 text-4xl font-bold text-white">Custom</p>
-                            <p class="text-gray-500">for large organizations</p>
-                            <ul class="mt-6 space-y-2 text-gray-400">
-                                <li>Everything in Business</li>
-                                <li>Dedicated Account Manager</li>
-                                <li>Custom Integrations</li>
-                                <li>SLA & Security Reviews</li>
+                            <p class="text-gray-500 h-12">For large organizations with complex needs and security requirements.</p>
+                            <ul class="mt-6 space-y-3 text-gray-400 text-left feature-list">
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Everything in Pro, plus:</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Dedicated Account Manager</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Custom Integrations & API</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>SAML SSO & Security Audits</li>
                             </ul>
                         </div>
                         <a href="contact.html" class="mt-8 w-full secondary-button px-6 py-3 rounded-lg font-semibold inline-block">Contact Us</a>
@@ -106,5 +144,32 @@
             </div>
         </div>
     </footer>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const toggle = document.getElementById('billing-toggle');
+            const monthlyLabel = document.getElementById('monthly-label');
+            const annualLabel = document.getElementById('annual-label');
+            const prices = document.querySelectorAll('[data-price-monthly]');
+
+            const updatePrices = () => {
+                const isAnnual = toggle.checked;
+                
+                monthlyLabel.classList.toggle('text-white', !isAnnual);
+                monthlyLabel.classList.toggle('text-gray-500', isAnnual);
+                
+                annualLabel.classList.toggle('text-white', isAnnual);
+                annualLabel.classList.toggle('text-gray-500', !isAnnual);
+
+                prices.forEach(priceEl => {
+                    const monthlyPrice = priceEl.getAttribute('data-price-monthly');
+                    const annualPrice = priceEl.getAttribute('data-price-annual');
+                    priceEl.textContent = isAnnual ? `$${annualPrice}` : `$${monthlyPrice}`;
+                });
+            };
+
+            toggle.addEventListener('change', updatePrices);
+            updatePrices(); // Set initial state
+        });
+    </script>
 </body>
 </html>
