--- a/pricing.html
+++ b/pricing.html
@@ -21,6 +21,9 @@
         .toggle-bg:after { content: ''; position: absolute; top: 2px; left: 2px; background: white; border-radius: 9999px; height: 1.5rem; width: 1.5rem; transition: transform 0.2s ease-in-out; }
         input:checked + .toggle-bg:after { transform: translateX(100%); }
         input:checked + .toggle-bg { background-color: #34D399; }
+        .comparison-table th, .comparison-table td { padding: 1rem 1.5rem; text-align: center; }
+        .comparison-table .feature-name { text-align: left; }
+        .comparison-table .check-mark { color: #34D399; }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-200">
@@ -123,6 +126,144 @@
                         </div>
                         <a href="contact.html" class="mt-8 w-full secondary-button px-6 py-3 rounded-lg font-semibold inline-block">Contact Us</a>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Feature Comparison Section -->
+        <section class="py-20">
+            <div class="container mx-auto px-6">
+                <div class="text-center mb-12">
+                    <h3 class="text-3xl md:text-4xl font-bold text-white">Compare Our Features</h3>
+                    <p class="text-gray-400 mt-2">Find the perfect set of tools for your team's needs.</p>
+                </div>
+                <div class="overflow-x-auto rounded-lg border border-gray-700">
+                    <table class="w-full comparison-table text-sm text-gray-300">
+                        <thead class="bg-gray-800">
+                            <tr>
+                                <th class="feature-name font-bold text-lg text-white">Features</th>
+                                <th class="font-semibold">Free</th>
+                                <th class="font-semibold">Starter</th>
+                                <th class="font-semibold">Pro</th>
+                                <th class="font-semibold">Enterprise</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Time Tracking -->
+                            <tr class="bg-gray-800"><td colspan="5" class="feature-name text-white font-bold">Time Tracking</td></tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Web, Desktop & Mobile Apps</td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Manual Time Entry</td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Timer with Start/Stop</td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                             <tr class="border-b border-gray-700">
+                                <td class="feature-name">Timesheet Approvals</td>
+                                <td></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Project Budgeting & Alerts</td>
+                                <td></td>
+                                <td></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                            <!-- Reporting -->
+                            <tr class="bg-gray-800"><td colspan="5" class="feature-name text-white font-bold">Reporting & Analytics</td></tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Basic Time Reports</td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Export to CSV/PDF</td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Advanced & Custom Reports</td>
+                                <td></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                            <!-- Team Management -->
+                            <tr class="bg-gray-800"><td colspan="5" class="feature-name text-white font-bold">Team & Company Management</td></tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">User Roles & Permissions</td>
+                                <td>Basic</td>
+                                <td>Advanced</td>
+                                <td>Advanced</td>
+                                <td>Custom</td>
+                            </tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Number of Companies</td>
+                                <td>1</td>
+                                <td>1</td>
+                                <td>Up to 3</td>
+                                <td>Unlimited</td>
+                            </tr>
+                            <!-- Support & Security -->
+                            <tr class="bg-gray-800"><td colspan="5" class="feature-name text-white font-bold">Support & Security</td></tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Community Support</td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Email & Chat Support</td>
+                                <td></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                            <tr class="border-b border-gray-700">
+                                <td class="feature-name">Priority Support Queue</td>
+                                <td></td>
+                                <td></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                             <tr class="border-b border-gray-700">
+                                <td class="feature-name">Dedicated Account Manager</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                            <tr>
+                                <td class="feature-name">SAML SSO & Security Audits</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td><span class="check-mark">&#10003;</span></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </section>
