--- a/pricing.html
+++ b/pricing.html
@@ -68,7 +68,7 @@
                             <p class="text-gray-500 h-12">For individuals and small teams just getting started.</p>
                             <ul class="mt-6 space-y-3 text-gray-400 text-left feature-list">
                                 <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Up to 5 users</li>
-                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>1 Company</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>1 Workspace</li>
                                 <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Core Time Tracking</li>
                             </ul>
                         </div>
@@ -101,10 +101,10 @@
                                 <span class="text-4xl font-bold text-white" data-price-monthly="8" data-price-annual="6.80">$8</span>
                                 <span class="text-gray-400">/ user / month</span>
                             </div>
-                            <p class="text-gray-400 h-12">For businesses that need to manage multiple projects and companies.</p>
+                            <p class="text-gray-400 h-12">For businesses that need to manage multiple projects and teams.</p>
                             <ul class="mt-6 space-y-3 text-gray-300 text-left feature-list">
                                 <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Unlimited Users</li>
-                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Manage Multiple Companies</li>
+                                <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Manage Multiple Workspaces</li>
                                 <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Project Budgeting</li>
                                 <li><svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Priority Support</li>
                             </ul>
@@ -210,7 +210,7 @@
                                 <td><span class="check-mark">&#10003;</span></td>
                             </tr>
                             <!-- Team Management -->
-                            <tr class="bg-gray-800"><td colspan="5" class="feature-name text-white font-bold">Team & Company Management</td></tr>
+                            <tr class="bg-gray-800"><td colspan="5" class="feature-name text-white font-bold">Team & Workspace Management</td></tr>
                             <tr class="border-b border-gray-700">
                                 <td class="feature-name">User Roles & Permissions</td>
                                 <td>Basic</td>
@@ -219,7 +219,7 @@
                                 <td>Custom</td>
                             </tr>
                             <tr class="border-b border-gray-700">
-                                <td class="feature-name">Number of Companies</td>
+                                <td class="feature-name">Number of Workspaces</td>
                                 <td>1</td>
                                 <td>1</td>
                                 <td>Up to 3</td>
