--- a/app.html
+++ b/app.html
@@ -129,8 +129,8 @@
                 timesheets: {
                     'ws-acme': {
                         'Javier Pizaña': {
-                            '2025-06-09': { punches: [{time: '10:00', type: 'in'}, {time: '12:00', type: 'out'}] },
-                            '2025-06-10': { punches: [{time: '10:00', type: 'in'}, {time: '12:00', type: 'out'}, {time: '13:00', type: 'in'}, {time: '17:00', type: 'out'}] },
+                            '2025-06-09': { locked: true, punches: [{time: '10:00', type: 'in'}, {time: '12:00', type: 'out'}] },
+                            '2025-06-10': { locked: true, punches: [{time: '10:00', type: 'in'}, {time: '12:00', type: 'out'}, {time: '13:00', type: 'in'}, {time: '17:00', type: 'out'}] },
                         },
                         'Alice Johnson': {
                             '2025-06-16': { punches: [{time: '09:00', type: 'in'}, {time: '17:00', type: 'out'}] },
