--- a/settings.html
+++ b/settings.html
@@ -1,1 +1,59 @@
-<!-- settings content placeholder -->
+<!-- Settings Page Using Unified Theme -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Settings - NexusTime</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/style.css">
+</head>
+<body class="bg-gray-950 text-white font-inter min-h-screen">
+  <header class="bg-gray-900 border-b border-gray-800 px-6 py-4 flex justify-between items-center">
+    <img src="/logo.png" alt="Logo" class="h-10" onerror="this.onerror=null; this.src='https://placehold.co/160x40/111827/34D399?text=NexusTime';">
+    <nav class="hidden md:flex space-x-6 text-gray-400">
+      <a href="/dashboard.html" class="hover:text-emerald-400">Dashboard</a>
+      <a href="/timesheet.html" class="hover:text-emerald-400">Timesheets</a>
+      <a href="/manage.html" class="hover:text-emerald-400">Manage</a>
+      <a href="/settings.html" class="text-emerald-400">Settings</a>
+      <a href="/workspace.html" class="hover:text-emerald-400">Switch Workspace</a>
+      <a href="/index.html" class="secondary-button px-4 py-2 rounded-lg">Log Out</a>
+    </nav>
+  </header>
+
+  <main class="p-6 space-y-8">
+    <div class="text-center mb-10">
+      <h1 class="text-3xl font-bold">Account Settings</h1>
+      <p class="text-gray-400">Update your personal info, password, and preferences.</p>
+    </div>
+
+    <!-- User Settings Form -->
+    <section class="bg-gray-900 p-6 rounded-xl shadow-xl space-y-6 max-w-xl mx-auto">
+      <div>
+        <label class="block text-sm text-gray-400 mb-1" for="name">Full Name</label>
+        <input id="name" type="text" class="w-full px-4 py-2 bg-gray-800 rounded text-white" value="Javier Pizana">
+      </div>
+      <div>
+        <label class="block text-sm text-gray-400 mb-1" for="email">Email</label>
+        <input id="email" type="email" class="w-full px-4 py-2 bg-gray-800 rounded text-white" value="you@example.com">
+      </div>
+      <div>
+        <label class="block text-sm text-gray-400 mb-1" for="password">New Password</label>
+        <input id="password" type="password" class="w-full px-4 py-2 bg-gray-800 rounded text-white" placeholder="••••••••">
+      </div>
+      <div>
+        <label class="inline-flex items-center">
+          <input type="checkbox" class="form-checkbox bg-gray-700 rounded mr-2">
+          <span class="text-sm text-gray-300">Receive email notifications</span>
+        </label>
+      </div>
+      <div class="text-right">
+        <button class="bg-emerald-500 px-4 py-2 rounded hover:bg-emerald-400">Save Changes</button>
+      </div>
+    </section>
+  </main>
+
+  <script src="/scripts/common.js" type="module"></script>
+</body>
+</html>
