--- a/workspace.html
+++ b/workspace.html
@@ -1,1 +1,50 @@
-<!-- workspace content placeholder -->
+<!-- Workspace Page Using Unified Theme -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Switch Workspace - NexusTime</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/style.css">
+</head>
+<body class="bg-gray-950 text-white font-inter min-h-screen">
+  <header class="bg-gray-900 border-b border-gray-800 px-6 py-4 flex justify-between items-center">
+    <img src="/logo.png" alt="Logo" class="h-10" onerror="this.onerror=null; this.src='https://placehold.co/160x40/111827/34D399?text=NexusTime';">
+    <nav class="hidden md:flex space-x-6 text-gray-400">
+      <a href="/dashboard.html" class="hover:text-emerald-400">Dashboard</a>
+      <a href="/timesheet.html" class="hover:text-emerald-400">Timesheets</a>
+      <a href="/manage.html" class="hover:text-emerald-400">Manage</a>
+      <a href="/settings.html" class="hover:text-emerald-400">Settings</a>
+      <a href="/workspace.html" class="text-emerald-400">Switch Workspace</a>
+      <a href="/index.html" class="secondary-button px-4 py-2 rounded-lg">Log Out</a>
+    </nav>
+  </header>
+
+  <main class="p-6 space-y-8">
+    <div class="text-center mb-10">
+      <h1 class="text-3xl font-bold">Workspace Selection</h1>
+      <p class="text-gray-400">Choose which workspace you'd like to manage.</p>
+    </div>
+
+    <!-- Workspace Cards -->
+    <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="bg-gray-900 p-6 rounded-xl shadow-xl hover:ring-2 ring-emerald-400 cursor-pointer">
+        <h3 class="text-xl font-semibold">Marketing Team</h3>
+        <p class="text-gray-400">4 active users · 30+ timesheets</p>
+      </div>
+      <div class="bg-gray-900 p-6 rounded-xl shadow-xl hover:ring-2 ring-emerald-400 cursor-pointer">
+        <h3 class="text-xl font-semibold">Engineering</h3>
+        <p class="text-gray-400">6 active users · 60+ timesheets</p>
+      </div>
+      <div class="bg-gray-900 p-6 rounded-xl shadow-xl hover:ring-2 ring-emerald-400 cursor-pointer">
+        <h3 class="text-xl font-semibold">HR & Ops</h3>
+        <p class="text-gray-400">3 active users · 12 timesheets</p>
+      </div>
+    </section>
+  </main>
+
+  <script src="/scripts/common.js" type="module"></script>
+</body>
+</html>
