--- a/app.html
+++ b/app.html
@@ -1,4 +1,4 @@
-<!-- Login Page (from app.html) with Unified Theme -->
+<!-- Final Login Page Using Unified Theme (Saved as app.html) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,7 +34,7 @@
       <button type="submit" class="w-full bg-emerald-500 py-2 rounded hover:bg-emerald-400 font-semibold">Sign In</button>
     </form>
     <p class="text-center text-sm text-gray-400 mt-6">
-      Don’t have an account? <a href="#" class="text-emerald-400 hover:underline">Sign up</a>
+      Don’t have an account? <a href="/signup.html" class="text-emerald-400 hover:underline">Sign up</a>
     </p>
   </main>
 
