--- a/schedule.html
+++ b/schedule.html
@@ -1,4 +1,4 @@
-<!-- Employee Scheduling Page Using Unified Theme -->
+<!-- Schedule Page with Updated Menu and Full Content -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,62 +9,78 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-950 text-white font-inter">
-  <div class="min-h-screen flex flex-col">
-    <header class="bg-gray-900 p-4 shadow-lg flex justify-between items-center">
-      <h1 class="text-xl font-bold">Employee Scheduling</h1>
-      <a href="/dashboard.html" class="text-sm text-emerald-400 hover:underline">Back to Dashboard</a>
-    </header>
+  <nav class="bg-gray-900 text-white py-3 shadow-md">
+    <div class="container mx-auto px-6 flex justify-between items-center">
+      <a href="/dashboard.html" class="text-xl font-bold text-emerald-400">NexusTime</a>
+      <div class="flex space-x-4 text-sm">
+        <a href="/dashboard.html" class="hover:text-emerald-400">Dashboard</a>
+        <a href="/schedule.html" class="hover:text-emerald-400">Schedule</a>
+        <a href="/timesheets.html" class="hover:text-emerald-400">Timesheets</a>
+        <a href="/workspace.html" class="hover:text-emerald-400">Workspace</a>
+        <a href="/employees.html" class="hover:text-emerald-400">Employees</a>
+        <a href="/manage.html" class="hover:text-emerald-400">Manage</a>
+        <a href="/timeoff.html" class="hover:text-emerald-400">Time Off</a>
+        <a href="/settings.html" class="hover:text-emerald-400">Settings</a>
+        <a href="/switch-workspace.html" class="hover:text-emerald-400">Switch Workspace</a>
+        <a href="/app.html" class="hover:text-emerald-400">Logout</a>
+      </div>
+    </div>
+  </nav>
 
-    <main class="flex-1 p-6">
-      <section class="bg-gray-900 p-6 rounded-xl shadow-md">
-        <div class="flex justify-between items-center mb-4">
-          <h2 class="text-xl font-semibold">Weekly Schedule</h2>
-          <p class="text-sm text-gray-400">Week Start: <strong class="text-emerald-400">Saturday</strong> → <strong class="text-emerald-400">Friday</strong></p>
-        </div>
-        <div class="overflow-x-auto">
-          <table class="w-full table-fixed border-collapse text-sm">
-            <thead>
-              <tr class="bg-gray-800 text-emerald-400">
-                <th class="w-1/8 p-2 text-left">Employee</th>
-                <th class="w-1/8 p-2 text-center">Sat</th>
-                <th class="w-1/8 p-2 text-center">Sun</th>
-                <th class="w-1/8 p-2 text-center">Mon</th>
-                <th class="w-1/8 p-2 text-center">Tue</th>
-                <th class="w-1/8 p-2 text-center">Wed</th>
-                <th class="w-1/8 p-2 text-center">Thu</th>
-                <th class="w-1/8 p-2 text-center">Fri</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="border-b border-gray-700">
-                <td class="p-2">John Doe</td>
-                <td class="text-center p-2">OFF</td>
-                <td class="text-center p-2">OFF</td>
-                <td class="text-center p-2">9am - 5pm</td>
-                <td class="text-center p-2">9am - 5pm</td>
-                <td class="text-center p-2">9am - 5pm</td>
-                <td class="text-center p-2">9am - 5pm</td>
-                <td class="text-center p-2">9am - 5pm</td>
-              </tr>
-              <tr class="border-b border-gray-700">
-                <td class="p-2">Emily Smith</td>
-                <td class="text-center p-2">OFF</td>
-                <td class="text-center p-2">OFF</td>
-                <td class="text-center p-2">10am - 6pm</td>
-                <td class="text-center p-2">10am - 6pm</td>
-                <td class="text-center p-2">10am - 6pm</td>
-                <td class="text-center p-2">10am - 6pm</td>
-                <td class="text-center p-2">10am - 6pm</td>
-              </tr>
-              <!-- More rows dynamically added later -->
-            </tbody>
-          </table>
-        </div>
-        <div class="text-right mt-4">
-          <button class="bg-emerald-500 hover:bg-emerald-400 text-white font-bold py-2 px-4 rounded">Edit Schedule</button>
-        </div>
-      </section>
-    </main>
-  </div>
+  <main class="flex-1 p-6">
+    <section class="bg-gray-900 p-6 rounded-xl shadow-md">
+      <div class="flex justify-between items-center mb-4">
+        <h2 class="text-xl font-semibold">Weekly Schedule</h2>
+        <p id="weekRange" class="text-sm text-gray-400"></p>
+      </div>
+
+      <div class="overflow-x-auto">
+        <table id="scheduleTable" class="w-full table-fixed border-collapse text-sm">
+          <thead>
+            <tr class="bg-gray-800 text-emerald-400" id="scheduleHeader"></tr>
+          </thead>
+          <tbody id="scheduleBody"></tbody>
+        </table>
+      </div>
+
+      <div class="text-right mt-4">
+        <button class="bg-emerald-500 hover:bg-emerald-400 text-white font-bold py-2 px-4 rounded">Edit Schedule</button>
+      </div>
+    </section>
+  </main>
+
+  <script>
+    const weekdays = ['sunday','monday','tuesday','wednesday','thursday','friday','saturday'];
+    const labels = ['Sun','Mon','Tue','Wed','Thu','Fri','Sat'];
+    const settings = JSON.parse(localStorage.getItem('nexustime-settings')) || { weekStart: 'saturday' };
+    const startIndex = weekdays.indexOf(settings.weekStart);
+    const orderedDays = [...labels.slice(startIndex), ...labels.slice(0, startIndex)];
+
+    const headerRow = document.getElementById('scheduleHeader');
+    headerRow.innerHTML = `<th class="w-1/8 p-2 text-left">Employee</th>` +
+      orderedDays.map(day => `<th class="w-1/8 p-2 text-center">${day}</th>`).join('');
+
+    const scheduleBody = document.getElementById('scheduleBody');
+    const rows = [
+      {
+        name: 'John Doe',
+        shifts: ['OFF','OFF','9-5','9-5','9-5','9-5','9-5']
+      },
+      {
+        name: 'Emily Smith',
+        shifts: ['OFF','OFF','10-6','10-6','10-6','10-6','10-6']
+      }
+    ];
+
+    for (const emp of rows) {
+      const shiftRow = `<tr class="border-b border-gray-700">
+        <td class="p-2">${emp.name}</td>
+        ${orderedDays.map((_, i) => `<td class="text-center p-2">${emp.shifts[i] || 'OFF'}</td>`).join('')}
+      </tr>`;
+      scheduleBody.innerHTML += shiftRow;
+    }
+
+    document.getElementById('weekRange').textContent = `Week Start: ${settings.weekStart.charAt(0).toUpperCase() + settings.weekStart.slice(1)}`;
+  </script>
 </body>
 </html>
