--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,4 @@
-<!-- Dashboard Page with Updated Menu and Full Content -->
+<!-- Dashboard Page with Updated Menu and Workspace Check -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +9,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-950 text-white font-inter">
+  <script>
+    const selectedWorkspace = localStorage.getItem('activeWorkspace');
+    if (!selectedWorkspace) window.location.href = '/switch-workspace.html';
+  </script>
+
   <nav class="bg-gray-900 text-white py-3 shadow-md">
     <div class="container mx-auto px-6 flex justify-between items-center">
       <a href="/dashboard.html" class="text-xl font-bold text-emerald-400">NexusTime</a>
@@ -28,6 +33,8 @@
   </nav>
 
   <main class="flex-1 p-6 space-y-6">
+    <h1 class="text-xl font-bold text-emerald-400">Workspace: <span id="workspaceName"></span></h1>
+
     <!-- Summary -->
     <section class="grid grid-cols-1 md:grid-cols-4 gap-4">
       <div class="bg-gray-800 p-4 rounded-xl">
@@ -85,5 +92,9 @@
       <p class="text-sm text-emerald-400">🧠 "Team productivity dips every Friday afternoon. Consider lighter tasks during this time."</p>
     </section>
   </main>
+
+  <script>
+    document.getElementById('workspaceName').textContent = selectedWorkspace;
+  </script>
 </body>
 </html>
