--- a/timesheets.html
+++ b/timesheets.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Workspace - NexusTime</title>
+  <title>Timesheets - NexusTime</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -19,8 +19,8 @@
       <div class="flex space-x-4 text-sm">
         <a href="/dashboard.html" class="hover:text-emerald-400">Dashboard</a>
         <a href="/schedule.html" class="hover:text-emerald-400">Schedule</a>
-        <a href="/timesheets.html" class="hover:text-emerald-400">Timesheets</a>
-        <a href="/workspace.html" class="hover:text-emerald-400 font-semibold">Workspace</a>
+        <a href="/timesheets.html" class="hover:text-emerald-400 font-semibold">Timesheets</a>
+        <a href="/workspace.html" class="hover:text-emerald-400">Workspace</a>
         <a href="/employees.html" class="hover:text-emerald-400">Employees</a>
         <a href="/manage.html" class="hover:text-emerald-400">Manage</a>
         <a href="/timeoff.html" class="hover:text-emerald-400">Time Off</a>
@@ -32,8 +32,9 @@
   </nav>
 
   <main class="p-6 max-w-6xl mx-auto">
-    <h1 class="text-2xl font-bold mb-4">Workspace Info - <span id="workspaceName"></span></h1>
-    <p class="text-gray-400 mb-6">Details, billing, and ownership settings for your workspace go here.</p>
+    <h1 class="text-2xl font-bold mb-4">Timesheets - <span id="workspaceName"></span></h1>
+    <p class="text-gray-400 mb-6">Timesheet entries and submission overview go here.</p>
+    <!-- Add timesheet table or logic as needed -->
   </main>
 
   <script>
